--- a/packages/shared/styles/starlight.css
+++ b/packages/shared/styles/starlight.css
@@ -58,7 +58,7 @@
   transition: all 0.15s;
 }
 .pagination-links a:hover {
-  background: #f5f5f5;
+  background: var(--sl-color-bg-nav);
 }
 
 .link-title {
